test/withdrawals/withdrawals-raw.out

CIDR           IP Block            b16           NHI                 
--             0.0.0.0/27          0x00000000    
0              0.0.0.8/29          0x00000008    1
0/0            0.0.0.8/30          0x00000008    
1              0.0.0.0/29          0x00000000    2
1/0            0.0.0.0/30          0x00000000    
2              0.0.0.16/30         0x00000010    1:1(1) 2:1(1) 

NHI Addr            CIDR Level          IP Address Block    % util    
--                  --                  0.0.0.0/27          68.75     
1                   0                   0.0.0.8/29          75.0      
2                   1                   0.0.0.0/29          75.0      

** 		 Using specified 1.0ns clock resolution


--- Phase I: construct table of routers and hosts


--- Phase II: connect Point-To-Point links


--- Phase III: add static routes
## Net config: 2 routers and hosts
## Elapsed time: 0.508 seconds
** Running for 15000000000 clock ticks (== 15.0 seconds sim time)
----------------------------------------------------------------------
|	Raceway SSF 1.0b09 (2 May 2001)
|	 Proprietary Internal Development Release
|	(c)2000,2001 Renesys Corporation
----------------------------------------------------------------------

~#
~# = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =
~# WITHDRAWALS Validation Test: successful if six steps printed below
~# = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =
~#
~# 1. AS X: bogus route being advertised to AS Y
~# 2. AS Y: received advertisement from AS X
~# 3. AS Y: bogus route added to routing table
~# 4. AS X: withdrawal for bogus route being sent to AS Y
~# 5. AS Y: received withdrawal from AS X
~# 6. AS Y: bogus route removed from forwarding table
~#             *** TEST SUCCESSFUL ***
~#
----------------------------------------------------------------------
| 1 timelines, 5 barriers, 73 events, 441 ms, 0 Kevt/s
----------------------------------------------------------------------
